{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 283,
  "lineage": "8529a401-10b9-3059-2eeb-8d9e1106fcf9",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "metroDev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411658317626:vpc/vpc-ddce7ea0",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-1f911c70",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-67065b1d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-ddce7ea0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-3c586742",
            "owner_id": "411658317626",
            "tags": {
              "Name": "Default VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "metroDevIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411658317626:internet-gateway/igw-00bc9919307c13385",
            "id": "igw-00bc9919307c13385",
            "owner_id": "411658317626",
            "tags": {
              "Name": "metroDev"
            },
            "tags_all": {
              "Name": "metroDev"
            },
            "vpc_id": "vpc-0a5f85d15d81c3a5f"
          },
          "dependencies": [
            "aws_vpc.metroDev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:411658317626:loadbalancer/app/lb-tf/1cf7e21c6922dd03",
            "arn_suffix": "app/lb-tf/1cf7e21c6922dd03",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb-tf-626289164.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:411658317626:loadbalancer/app/lb-tf/1cf7e21c6922dd03",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-044a3b491c2cfa862"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02b519f9c9bcfa587"
              },
              {
                "subnet_id": "subnet-0bb58d3e8eacfc554"
              }
            ],
            "subnets": [
              "subnet-02b519f9c9bcfa587",
              "subnet-0bb58d3e8eacfc554"
            ],
            "vpc_id": "vpc-0a5f85d15d81c3a5f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg_tf",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.metroDev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:411658317626:listener/app/lb-tf/1cf7e21c6922dd03/d95b0625f87fd83c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:411658317626:targetgroup/talb-metro/ccc3d975ac6cb97e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:411658317626:listener/app/lb-tf/1cf7e21c6922dd03/d95b0625f87fd83c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:411658317626:loadbalancer/app/lb-tf/1cf7e21c6922dd03",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb",
            "aws_lb_target_group.albTG-metro",
            "aws_security_group.alb_sg_tf",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.metroDev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "albTG-metro",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:411658317626:targetgroup/talb-metro/ccc3d975ac6cb97e",
            "arn_suffix": "targetgroup/talb-metro/ccc3d975ac6cb97e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:411658317626:targetgroup/talb-metro/ccc3d975ac6cb97e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "talb-metro",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a5f85d15d81c3a5f"
          },
          "dependencies": [
            "aws_vpc.metroDev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "metroDevRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411658317626:route-table/rtb-03ce7a40793e14fd2",
            "id": "rtb-03ce7a40793e14fd2",
            "owner_id": "411658317626",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00bc9919307c13385",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "metroDev"
            },
            "tags_all": {
              "Name": "metroDev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a5f85d15d81c3a5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.metroDevIGW",
            "aws_vpc.metroDev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTASSOA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056be3f2457f7cde8",
            "route_table_id": "rtb-03ce7a40793e14fd2",
            "subnet_id": "subnet-0bb58d3e8eacfc554"
          },
          "dependencies": [
            "aws_internet_gateway.metroDevIGW",
            "aws_route_table.metroDevRT",
            "aws_subnet.public1",
            "aws_vpc.metroDev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RTASSOB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5c0933f8ec1c4fb",
            "route_table_id": "rtb-03ce7a40793e14fd2",
            "subnet_id": "subnet-02b519f9c9bcfa587"
          },
          "dependencies": [
            "aws_internet_gateway.metroDevIGW",
            "aws_route_table.metroDevRT",
            "aws_subnet.public2",
            "aws_vpc.metroDev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411658317626:security-group/sg-044a3b491c2cfa862",
            "description": "Allow port 80 for all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-044a3b491c2cfa862",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS ingress",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_sg_tf",
            "name_prefix": "",
            "owner_id": "411658317626",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a5f85d15d81c3a5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.metroDev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411658317626:security-group/sg-0fe6b01a4466aca9e",
            "description": "Allow port 22, 80 server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fe6b01a4466aca9e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS ingress",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2_sg_tf",
            "name_prefix": "",
            "owner_id": "411658317626",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-ddce7ea0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.metroDev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411658317626:security-group/sg-0835819e87d86ced0",
            "description": "Allow port 3306 server",
            "egress": [],
            "id": "sg-0835819e87d86ced0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS ingress",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_sg_tf",
            "name_prefix": "",
            "owner_id": "411658317626",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-ddce7ea0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.metroDev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411658317626:subnet/subnet-0bb58d3e8eacfc554",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb58d3e8eacfc554",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411658317626",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "metroDev"
            },
            "tags_all": {
              "Name": "metroDev"
            },
            "vpc_id": "vpc-0a5f85d15d81c3a5f"
          },
          "dependencies": [
            "aws_vpc.metroDev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411658317626:subnet/subnet-02b519f9c9bcfa587",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b519f9c9bcfa587",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "411658317626",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "metroDev"
            },
            "tags_all": {
              "Name": "metroDev"
            },
            "vpc_id": "vpc-0a5f85d15d81c3a5f"
          },
          "dependencies": [
            "aws_vpc.metroDev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "metroDev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:411658317626:vpc/vpc-0a5f85d15d81c3a5f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05eeee283c4c677d5",
            "default_route_table_id": "rtb-0efc60027c128824c",
            "default_security_group_id": "sg-0706e27c94b1430c0",
            "dhcp_options_id": "dopt-67065b1d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a5f85d15d81c3a5f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0efc60027c128824c",
            "owner_id": "411658317626",
            "tags": {
              "Name": "metroDev"
            },
            "tags_all": {
              "Name": "metroDev"
            }
          }
        }
      ]
    }
  ]
}